# NotenScan

./: .gitignore  NotenScan-Workspace.code-workspace  README.md  README_yalc.md  check-yalc.js
.githooks/: post-commit  pre-commit
Backend/: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
Backend/.github/instructions/: GitHubCopilotInstructions.instructions.md
Backend/api/v1/: musicsheets.py  ocr.py  pdf_tasks.py  voices.py
Backend/docs/: schema.sql
Backend/templates/: invite_email.html  invite_email.txt
Frontend/: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  stats.html  tailwind.config.js  tsconfig.json  vite.config.ts
Frontend/.githooks/: pre-commit
Frontend/.yalc/@schlayer-consulting/sc-base-frontend/: README.md  package.json  yalc.sig
Frontend/scripts/: check-yalc.js
Frontend/src/: App.tsx  i18n.ts  main.tsx  vite-env.d.ts
Frontend/src/components/: OcrLabelAssignment.tsx  PDFViewer.tsx
Frontend/src/hooks/: useSidebarCollapsed.ts
Frontend/src/layouts/: AppShell.tsx
Frontend/src/locales/de/: AppShell.json  DocumentUploadPage.json  PDFViewer.json  VoiceScanPage.json  common.json
Frontend/src/locales/en/: AppShell.json  DocumentUploadPage.json  PDFViewer.json  VoiceScanPage.json
Frontend/src/locales/fr/: AppShell.json  DocumentUploadPage.json  PDFViewer.json  VoiceScanPage.json  common.json
Frontend/src/pages/: DocumentUploadPage.tsx  VoiceScanPage.tsx
Frontend/src/utils/: dataExport.ts  format.ts
Misc/Alte Python Anwendung/: Notenscanner.py
ServerstartBatches/: Postgres Start.bat  Postgres Stop.bat  StartBackend.bat  StartFrontend.bat
scripts/: check-yalc.js
