[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Bernd Schlayer",email = "ai@schlayer.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "Pillow (>=10.0.0,<11.0.0)",
    "sc-base-backend @ file:///D:/GitHub_Projekte/SC_BaseBackend",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"   # falls noch nicht drin
sc-base-backend = {develop = true}
